<resources>
    <string name="app_name">EnglishLearn</string>
    <string name="text_words">Words</string>
    <string name="text_add_word">Add Word</string>
    <string name="text_search_word">Search Word</string>
    <string name="text_etc">Etc</string>
    <string name="text_learn">Learn</string>

    <string name="text_word">Word</string>
    <string name="text_translate">Translate</string>
    <string name="text_add_word_tittle">Add word</string>
    <string name="text_edit_word_tittle">Edit word</string>
    <string name="text_enter_word">Enter word</string>
    <string name="text_enter_translate">Enter translate</string>
    <string name="text_added">Word Added</string>
    <string name="text_save_changes">Save changed</string>
    <string name="text_next">Next</string>
    <string name="text_show">Show</string>
    <string name="text_word_updated">Word updated</string>
    <string name="text_num">N</string>
    <string name="text_listen">Listen</string>
    <string name="text_print_to_console">Print to console all words</string>
    <string name="text_print_as_json">Print to console as json</string>
    <string name="text_close_db">Close DB</string>
    <string name="text_range_min">Range min: </string>
    <string name="text_max"> max: </string>
    <string name="text_start">Start</string>

</resources>