<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/word_back"
        android:gravity="center"
        android:text="@string/text_add_word_tittle"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/word_back"

        app:layout_constraintBottom_toBottomOf="@id/editTextWord"
        app:layout_constraintTop_toTopOf="@id/textViewWord" />

    <TextView
        android:id="@+id/textViewWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_word"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/text_enter_word"
        android:inputType="text"

        app:layout_constraintTop_toBottomOf="@id/textViewWord" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/word_back"

        app:layout_constraintBottom_toBottomOf="@id/editTextTranslate"
        app:layout_constraintTop_toTopOf="@id/textViewTranslate" />

    <TextView
        android:id="@+id/textViewTranslate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_translate"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/editTextWord" />

    <EditText
        android:id="@+id/editTextTranslate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/text_enter_translate"
        android:inputType="text"

        app:layout_constraintTop_toBottomOf="@id/textViewTranslate" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_add_word"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>