<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/word_back"
        android:gravity="center"
        android:text="@string/text_learn"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/word_back"

        app:layout_constraintBottom_toBottomOf="@id/editTextWord"
        app:layout_constraintTop_toTopOf="@id/textViewWord" />

    <TextView
        android:id="@+id/textViewWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_word"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="25sp"

        app:layout_constraintTop_toBottomOf="@id/textViewWord"
        tools:text="word" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/word_back"

        app:layout_constraintBottom_toBottomOf="@id/editTextTranslate"
        app:layout_constraintTop_toTopOf="@id/textViewTranslate" />

    <TextView
        android:id="@+id/textViewTranslate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_translate"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/editTextWord" />

    <TextView
        android:id="@+id/editTextTranslate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="25sp"

        app:layout_constraintTop_toBottomOf="@id/textViewTranslate"
        tools:text="transalte" />

    <TextView
        android:id="@+id/textViewRange"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_range_min"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintRight_toLeftOf="@id/editTextMin"
        app:layout_constraintBottom_toTopOf="@id/buttonListen"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextMin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="number"

        app:layout_constraintRight_toLeftOf="@id/textViewMax"
        app:layout_constraintTop_toTopOf="@id/textViewRange"
        app:layout_constraintLeft_toRightOf="@id/textViewRange"/>

    <TextView
        android:id="@+id/textViewMax"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_max"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintRight_toLeftOf="@id/editTextMax"
        app:layout_constraintTop_toTopOf="@id/textViewRange"
        app:layout_constraintLeft_toRightOf="@id/editTextMin"/>

    <EditText
        android:id="@+id/editTextMax"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="number"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewRange"
        app:layout_constraintLeft_toRightOf="@id/textViewMax"/>

    <Button
        android:id="@+id/buttonListen"
        android:layout_width="match_parent"
        android:text="@string/text_listen"
        android:layout_height="50dp"

        app:layout_constraintBottom_toTopOf="@id/buttonShowAll"/>

    <Button
        android:id="@+id/buttonShowAll"
        android:layout_width="match_parent"
        android:text="@string/text_show"
        android:layout_height="50dp"

        app:layout_constraintBottom_toTopOf="@id/buttonNext"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/text_next"

        app:layout_constraintLeft_toRightOf="@id/buttonStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/text_start"

        app:layout_constraintRight_toLeftOf="@id/buttonNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>