<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_search_word"

        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/text_enter_word"

        app:layout_constraintTop_toBottomOf="@id/textViewTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toBottomOf="@id/editTextWord">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewWord"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_word"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/textViewTranslate"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewDivide"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/gray"

                app:layout_constraintLeft_toRightOf="@id/textViewWord"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textViewTranslate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_translate"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toRightOf="@id/textViewWord"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>