<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNum"
                android:layout_width="46dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/text_num"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/black"
                app:layout_constraintLeft_toRightOf="@id/textViewNum"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewWord"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_word"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toRightOf="@id/textViewNum"
                app:layout_constraintRight_toLeftOf="@id/textViewTranslate"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxWord"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:checked="true"

                app:layout_constraintTop_toTopOf="@id/textViewWord"
                app:layout_constraintLeft_toLeftOf="@id/textViewWord"/>

            <View
                android:id="@+id/viewDivide"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/gray"

                app:layout_constraintLeft_toRightOf="@id/textViewWord"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxTranslate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:checked="true"

                app:layout_constraintTop_toTopOf="@id/textViewTranslate"
                app:layout_constraintLeft_toLeftOf="@id/textViewTranslate"/>

            <TextView
                android:id="@+id/textViewTranslate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_translate"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toRightOf="@id/textViewWord"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>